# figures-area

./: .gitignore  README.md  pyproject.toml
src/figures-area/: __init__.py
src/figures-area/shapes/: base.py  circle.py  triangle.py
src/figures_area/: __init__.py  main.py
src/figures_area/shapes/: __init__.py  triangle.py
tests/: conftest.py  test_shapes.py
