[project]
name = "figures-area"
version = "0.1.0"
description = "Library to calculate shapes area"
authors = [
    {name = "ruki-qq",email = "ruki@duck.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
