[project]
name = "figures-area"
version = "0.1.0"
description = "Library to calculate shapes area"
authors = [
    {name = "ruki-qq",email = "ruki@duck.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
